--- a/ML_part/movie_recommendation.ipynb
+++ b/ML_part/movie_recommendation.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 1,
       "metadata": {
         "id": "M7ql02dg_hpJ"
       },
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 2,
       "metadata": {
         "id": "9HOb60p1AjII"
       },
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -272,7 +272,7 @@
               "4                               John Carter           6.1        2124  "
             ]
           },
-          "execution_count": 19,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -283,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 4,
       "metadata": {
         "id": "rwLXx7esCifJ"
       },
@@ -294,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 5,
       "metadata": {
         "id": "3OoaRyR4IQPi"
       },
@@ -305,7 +305,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -543,7 +543,7 @@
               "[4809 rows x 7 columns]"
             ]
           },
-          "execution_count": 22,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -554,7 +554,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 7,
       "metadata": {
         "id": "g-qccP4vjJA9"
       },
@@ -571,7 +571,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 8,
       "metadata": {
         "id": "SpOpfLriC_N9"
       },
@@ -583,7 +583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 9,
       "metadata": {
         "id": "qAb9pU8UDSyB"
       },
@@ -595,7 +595,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 10,
       "metadata": {
         "id": "hgSNgQxIclCa"
       },
@@ -616,7 +616,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 11,
       "metadata": {
         "id": "7LToIc-hcrid"
       },
@@ -636,7 +636,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 12,
       "metadata": {
         "id": "FuVVcK6BQJei"
       },
@@ -649,7 +649,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 13,
       "metadata": {
         "id": "iosKLV22cu2z"
       },
@@ -679,7 +679,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 14,
       "metadata": {
         "id": "oCf3Qc4Scxqt"
       },
@@ -696,7 +696,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Defaulting to user installation because normal site-packages is not writeable\n",
+            "Collecting nltk\n",
+            "  Downloading nltk-3.8.1-py3-none-any.whl (1.5 MB)\n",
+            "Collecting tqdm\n",
+            "  Using cached tqdm-4.65.0-py3-none-any.whl (77 kB)\n",
+            "Requirement already satisfied: joblib in c:\\users\\hp\\appdata\\roaming\\python\\python39\\site-packages (from nltk) (1.2.0)\n",
+            "Collecting regex>=2021.8.3\n",
+            "  Downloading regex-2023.5.5-cp39-cp39-win_amd64.whl (267 kB)\n",
+            "Requirement already satisfied: click in c:\\users\\hp\\appdata\\roaming\\python\\python39\\site-packages (from nltk) (8.1.3)\n",
+            "Requirement already satisfied: colorama; platform_system == \"Windows\" in c:\\users\\hp\\appdata\\roaming\\python\\python39\\site-packages (from tqdm->nltk) (0.4.6)\n",
+            "Installing collected packages: tqdm, regex, nltk\n",
+            "Successfully installed nltk-3.8.1 regex-2023.5.5 tqdm-4.65.0\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "WARNING: You are using pip version 20.2.3; however, version 23.1.2 is available.\n",
+            "You should consider upgrading via the 'c:\\program files\\python39\\python.exe -m pip install --upgrade pip' command.\n"
+          ]
+        }
+      ],
+      "source": [
+        "!pip install nltk\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
       "metadata": {
         "id": "UunmEL71c1xv"
       },
@@ -718,7 +754,49 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 23,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Defaulting to user installation because normal site-packages is not writeable"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "WARNING: You are using pip version 20.2.3; however, version 23.1.2 is available.\n",
+            "You should consider upgrading via the 'c:\\program files\\python39\\python.exe -m pip install --upgrade pip' command.\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Collecting scikit-learn\n",
+            "  Using cached scikit_learn-1.2.2-cp39-cp39-win_amd64.whl (8.4 MB)\n",
+            "Collecting scipy>=1.3.2\n",
+            "  Using cached scipy-1.10.1-cp39-cp39-win_amd64.whl (42.5 MB)\n",
+            "Collecting threadpoolctl>=2.0.0\n",
+            "  Using cached threadpoolctl-3.1.0-py3-none-any.whl (14 kB)\n",
+            "Requirement already satisfied, skipping upgrade: numpy>=1.17.3 in c:\\users\\hp\\appdata\\roaming\\python\\python39\\site-packages (from scikit-learn) (1.24.3)\n",
+            "Requirement already satisfied, skipping upgrade: joblib>=1.1.1 in c:\\users\\hp\\appdata\\roaming\\python\\python39\\site-packages (from scikit-learn) (1.2.0)\n",
+            "Installing collected packages: scipy, threadpoolctl, scikit-learn\n",
+            "Successfully installed scikit-learn-1.2.2 scipy-1.10.1 threadpoolctl-3.1.0\n"
+          ]
+        }
+      ],
+      "source": [
+        "!pip install -U scikit-learn\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
       "metadata": {
         "id": "sQGT5-DOc5ZN"
       },
@@ -731,7 +809,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 25,
       "metadata": {
         "id": "tQVor0TXc87U"
       },
@@ -747,7 +825,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 26,
       "metadata": {
         "id": "5YH2gzjkdAL6"
       },
@@ -763,7 +841,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 27,
       "metadata": {
         "id": "kCchq2uIdISp"
       },
@@ -777,7 +855,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -862,7 +940,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.9.0"
     }
   },
   "nbformat": 4,
